// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessagesNavItem no messages 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/users/user/settings/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one CloningProgress message as non-site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/users/user/settings/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one CloningProgress message as site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/site-admin/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as non-site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/users/user/settings/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/site-admin/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one SyncError message as non-site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/users/user/settings/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusMessagesNavItem one SyncError message as site admin 1`] = `
<DocumentFragment>
  <div
    class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
  >
    <a
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btnLink nav-link"
      href="#"
    >
      <svg
        class="phabricator-icon mdi-icon iconInline iconInlineMd"
        data-tooltip="Repositories up-to-date"
        fill="currentColor"
        height="24"
        viewBox="0 -4 20 20"
        width="24"
      >
        <g>
          <path
            d="M14.4175 5.6859L14.6515 6.82244L16.1402 5.33371L16.1315 5.33301C15.5482 2.49967 13.0482 0.333008 9.96484 0.333008C7.54818 0.333008 5.46484 1.66634 4.46484 3.66634C1.88151 3.99967 -0.0351562 6.08301 -0.0351562 8.66634C-0.0351562 11.4163 2.21484 13.6663 4.96484 13.6663H10.273L8.52301 11.9163H4.96484C3.18134 11.9163 1.71484 10.4498 1.71484 8.66634C1.71484 7.00858 2.9321 5.62862 4.68879 5.40195L5.61324 5.28267L6.03009 4.44896C6.7313 3.04654 8.20576 2.08301 9.96484 2.08301C12.1965 2.08301 13.9973 3.64505 14.4175 5.6859Z"
            fill="#798BAF"
          />
          <path
            d="M9.74232 8.18541L8.50488 9.42285L12.7475 13.6655L19.8287 6.59486L18.5913 5.35742L12.7528 11.1959L9.74232 8.18541Z"
            fill="#37B24D"
          />
        </g>
        <defs>
          <clippath
            id="clip0"
          >
            <rect
              fill="white"
              height="20"
              width="20"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="p-0 dropdownMenu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdownMenuContent"
      >
        <small
          class="d-inline-block text-muted sync"
        >
          Code sync status
        </small>
        <div
          class="entry"
        >
          <h4
            class="d-flex align-items-center mb-0"
          >
            <svg
              class="mdi-icon text-success icon"
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
            Your repositories
          </h4>
          <div
            class="status-messages-nav-item__entry-card cardActive entryBorderSuccess"
          >
            <p
              class="message"
            >
              Repositories available for search
            </p>
            <a
              class="anchorLink text-primary"
              href="/site-admin/repositories"
            >
              Manage repositories
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
